# mini-ge-agent

./: AGENTS.md  NOTICE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
src/minigeagent/: __init__.py  __main__.py
src/minigeagent/agents/: __init__.py  default.py  graph.py  interactive.py
src/minigeagent/agents/utils/: prompt_user.py
src/minigeagent/config/: __init__.py  codegen.yaml  ge.yaml  mini.yaml
src/minigeagent/config/benchmarks/: __init__.py  programbench.yaml  swebench.yaml  swebench_modal.yaml
src/minigeagent/environments/: __init__.py  docker.py  local.py  singularity.py
src/minigeagent/environments/extra/: bubblewrap.py  contree.py  swerex_docker.py  swerex_modal.py
src/minigeagent/models/: __init__.py  litellm_model.py  litellm_response_model.py  litellm_textbased_model.py  openrouter_model.py  openrouter_response_model.py  openrouter_textbased_model.py  portkey_model.py  portkey_response_model.py  requesty_model.py  test_models.py
src/minigeagent/models/extra/: roulette.py
src/minigeagent/models/utils/: actions_text.py  actions_toolcall.py  actions_toolcall_response.py  openai_multimodal.py  retry.py
src/minigeagent/run/: __init__.py  hello_world.py  mini.py
src/minigeagent/run/benchmarks/: __init__.py  programbench.py  swebench.py  swebench_single.py
src/minigeagent/run/benchmarks/utils/: batch_progress.py  common.py
src/minigeagent/run/utilities/: __init__.py  config.py  inspector.py  mini_extra.py
src/minigeagent/utils/: log.py
tests/: conftest.py  test_fire.py  test_init.py
tests/agents/: test_default.py  test_graph.py  test_init.py  test_interactive.py  test_multimodal.py
tests/config/: test_init.py  test_swebench_template.py
tests/environments/: test_docker.py  test_init.py  test_local.py  test_singularity.py
tests/environments/extra/: test_bubblewrap.py  test_contree.py  test_swerex_docker.py  test_swerex_modal.py
tests/models/: test_actions_toolcall.py  test_anthropic_model_integration.py  test_anthropic_utils.py  test_cache_control.py  test_content_string.py  test_format_error_response_persistence.py  test_init.py  test_litellm_model.py  test_litellm_textbased_model.py  test_openrouter_textbased_model.py  test_portkey_model.py  test_portkey_response_model.py  test_test_models.py  test_truncation_finish_reason.py
tests/run/: test_batch_progress.py  test_cli_integration.py  test_extra_config.py  test_ge.py  test_inspector.py  test_local.py  test_programbench.py  test_run_hello_world.py  test_save.py  test_swebench.py  test_swebench_single.py
tests/test_data/: update_outputs_github_issue.py  update_outputs_local.py
tests/utils/: test_serialize.py
